[CHORE] 메일 초대 로직 수정

--- a/src/main/resources/templates/invitation.html
+++ b/src/main/resources/templates/invitation.html
@@ -65,7 +65,7 @@
     티키에서 더 편리해진 동아리 관리를 경험해보세요.
   </p>
   <div style="margin: 40px 0 60px 0">
-    <a th:href="'https://ti-kii.com/invite?teamId=' + ${teamId}" target="_blank" class="invite_button"> 초대 수락하기 </a>
+    <a th:href="'https://ti-kii.com/invite?teamId=' + ${teamId} + '&invitationId=' + ${invitationId}" target="_blank" class="invite_button"> 초대 수락하기 </a>
   </div>
   <div
           style="
